style.css
:root {
    --main: rgb(233, 233, 233);
}
* {
    margin: 0;
    padding: 0;
}
body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-color: var(--main);
}
.bg {
    width: 100%;
    height: 300px;
    object-fit: cover;
    position: absolute;
    z-index: -1;
    filter: brightness(30%);
}
.logo {
    position: absolute;
    object-fit: contain;
    width: 100px;
    margin: 10px 10px;
    cursor: pointer;
    z-index: 5;
}
header {
    position: relative;
    text-align: right;
    padding: 0;
    list-style-type: none;
}
.menu-icon {
    display: none;
    cursor: pointer;
}

.menu-items {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    opacity: 1; /* Initially visible */
}
.menu-items.hidden {
    opacity: 0; /* Hide menu items */
}
.menu-items li {
    margin: 10px;
    list-style-type: none;
}
.menu-items li a {
    text-decoration: none; 
    color: rgb(255, 255, 255);
}
h2 {
    text-align: center;
    color: aliceblue;
    position: relative;
    margin-top: 100px;
    font-size: 50px;
}
#menu-toggle {
    visibility: hidden;
}
.search-area {
    display: flex;
    justify-content: center; 
    align-items: center; 
    height: 150px;
}
.search {
    padding-left: 5px;
    width: 30%;
    background-color: var(--main);
    
}
.search::placeholder {
    color: rgba(0, 0, 0, 0.62);
}
.search input[type="search"] {
    margin-left: 10px;
    color: red;
}
.button{
    text-align: center;
    width: 100px;
}
.search, .button {
    margin: 100px 10px 20px 10px;
    height: 40px;
    border-radius: 5px;
    position: relative;
    font-size: 20px;
}

@media (max-width: 500px) {
    .menu-items {
        display: block;
        opacity: 0; /* Initially hidden */
        position: absolute;
        top: 0px;
        right: 0;
        background-color: rgb(0, 0, 0);
        width: 100%;
        height: 100vh;
        text-align: center;
        transition: opacity 0.3s ease; 
    }
    
    .menu-items.show-menu li:nth-child(1) {
        margin-top: 90px;
    }
    .menu-items.show-menu {
        opacity: 1;
    }
    
    .menu-icon {
        display: block;
        position: absolute;
        top: 10px;
        right: 10px;
        font-size: 20px;
        z-index: 2;
        color: aliceblue;
    }
    
    #menu-toggle:checked ~ .menu-items {
        z-index:  1;
        display: block;
    }
    h2 {
        margin-top: 30%;
    }

    .menu-items li {
        margin: 50px 0;
    }
    .search {
        width: 200px;
    }
    .search, .button {
        margin: 70px 5px 0px 5px;
    }
    .button {
        width: 80px;
    }
}

